force-app/main/default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
    <label>Feedback</label>
    <nameField>
        <displayFormat>FR-{0000}</displayFormat>
        <label>Feedback Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>