force-app/main/default/objects/Feedback__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Pillar category options</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pillar__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Workplace</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Estates Decarbonisation</fullName>
            </value>
            <value>
                <fullName>Document Management &amp; Logistics</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Fleet</fullName>
            </value>
            <value>
                <fullName>Marcomms &amp; Research</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Contact Centres</fullName>
            </value>
            <value>
                <fullName>People Services</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>PSR &amp; Permanent Recruitment</fullName>
            </value>
            <value>
                <fullName>Workforce Health &amp; Education</fullName>
            </value>
            <value>
                <fullName>Digital Future</fullName>
            </value>
            <value>
                <fullName>Network Services</fullName>
            </value>
            <value>
                <fullName>Technology Solutions &amp; Outcomes</fullName>
            </value>
            <value>
                <fullName>Technology Products and Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>