force-app/main/default/objects/Feedback__c/fields/Feedback_Categorisation__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Categorisation__c</fullName>
    <inlineHelpText>Was this feedback Positive, Neutral or Constructive?</inlineHelpText>
    <label>Feedback Categorisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Constructive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>