force-app/main/default/objects/Feedback__c/fields/Feedback_Topic__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Topic__c</fullName>
    <description>Multi choice feedback topic selection</description>
    <inlineHelpText>If this feedback related to any wider topics, select one or multiple topics if relevant.</inlineHelpText>
    <label>Feedback Topic</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessibility</fullName>
            </value>
            <value>
                <fullName>Aggregation</fullName>
            </value>
            <value>
                <fullName>Agreement triage</fullName>
            </value>
            <value>
                <fullName>Carbon Net Zero</fullName>
            </value>
            <value>
                <fullName>CCS guidance</fullName>
            </value>
            <value>
                <fullName>CCS process</fullName>
            </value>
            <value>
                <fullName>CCS support</fullName>
            </value>
            <value>
                <fullName>Competitor information</fullName>
            </value>
            <value>
                <fullName>Contacting CCS</fullName>
            </value>
            <value>
                <fullName>Customer experience</fullName>
            </value>
            <value>
                <fullName>Customer First - Consistency</fullName>
            </value>
            <value>
                <fullName>Customer First - Engagement</fullName>
            </value>
            <value>
                <fullName>Customer First - Pace</fullName>
            </value>
            <value>
                <fullName>Customer First - Simplicity</fullName>
            </value>
            <value>
                <fullName>Customer guidance</fullName>
            </value>
            <value>
                <fullName>Customer journey</fullName>
            </value>
            <value>
                <fullName>Customer suggestion</fullName>
            </value>
            <value>
                <fullName>Digital support</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>eMarketplace</fullName>
            </value>
            <value>
                <fullName>Health CAG</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Internal feedback</fullName>
            </value>
            <value>
                <fullName>Knowledge</fullName>
            </value>
            <value>
                <fullName>Knowledge sharing</fullName>
            </value>
            <value>
                <fullName>Marketing and communications</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Praise</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Procurement process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>