force-app/main/default/objects/Feedback__c/fields/Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Type__c</fullName>
    <label>Feedback Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Framework</fullName>
            </value>
            <value>
                <fullName>Framework Lot</fullName>
            </value>
            <value>
                <fullName>Framework Lot Supplier</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Framework Supplier</fullName>
                <isActive>false</isActive>
                <label>Framework Supplier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>