force-app/main/default/objects/Feedback__c/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Framework</label>
    <referenceTo>Master_Framework__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>