force-app/main/default/objects/Feedback__c/fields/Framework_Lot__c.field-meta.xml
<CustomField>
    <fullName>Framework_Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Search by Lot name, not number.</inlineHelpText>
    <label>Framework Lot</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Framework_Lot__c.Master_Framework__c</field>
            <operation>equals</operation>
            <valueField>$Source.Framework__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Framework_Lot__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>