force-app/main/default/objects/Feedback__c/fields/Framework_Lot_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Framework_Lot_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Search by the name of the Supplier.</inlineHelpText>
    <label>Framework Lot Supplier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Supplier_Framework_Lot__c.Master_Framework_Lot__c</field>
            <operation>equals</operation>
            <valueField>$Source.Framework_Lot__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Supplier_Framework_Lot__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>