force-app/main/default/objects/Feedback__c/fields/Framework_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Framework_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Type &apos;FS&apos; into the field to bring up search options to select the Framework Supplier.</inlineHelpText>
    <label>Framework Supplier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Framework_Supplier__c.Framework__c</field>
            <operation>equals</operation>
            <valueField>$Source.Framework__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Framework_Supplier__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>