force-app/main/default/objects/Feedback__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <inlineHelpText>In a few words, what was this feedback about?</inlineHelpText>
    <label>Subject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>