force-app/main/default/objects/Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Subject__c</columns>
    <columns>Feedback_Type__c</columns>
    <columns>Organisation__c</columns>
    <columns>Feedback_Categorisation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>